--- a/practiceburger.html
+++ b/practiceburger.html
@@ -6,6 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        /* 초기화 태그 작성 */
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        a {text-decoration: none !important;}
+        img{border: 0;}
+        ul{list-style-type: none;;}
+        header, footer, section {box-sizing: border-box;}
+
+        .wrap {
+            background: wheat;
+        }
+
+        /* 0~766px */
+        .header__nav {
+            max-width: 1200px;
+            background: #9de25c;
+            margin: 0 auto;
+            display: flex;
+        }
+
+
+        /* 767 ~ 1023px */
+        /* 1024px 이상 */
     </style>
 </head>
 <body>
