--- a/fortest.html
+++ b/fortest.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        let sum = 0;
+        for (let i = 0; i <= 100; i++) {
+            sum += i
+            console.log(`sum:${sum}`);
+        }
+
+        console.log(`최종 sum: ${sum}`)
+    </script>
 </body>
 </html>
